<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient"
    tools:context=".signin">
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/AmericanPride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/americanpride"
                android:contentDescription="@string/logo" />

            <EditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:layout_margin="20dp"
                android:textSize="30sp"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:layout_margin="20dp"
                android:textSize="30sp"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:layout_margin="20dp"
                android:textSize="30sp"
                app:boxBackgroundMode="outline"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmpassword"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:layout_margin="20dp"
                android:textSize="30sp"
                app:boxBackgroundMode="outline"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/button_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/signup"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>